--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Full Page Portfolio</title><link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" /><link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" media="all" rel="stylesheet" type="text/css" /><link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css" media="all" rel="stylesheet" type="text/css" />
-        <link href="css/styles.css" rel="stylesheet">
+    <title>Instalimos</title>
+    <link href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css" media="all" rel="stylesheet" type="text/css" />
+    
+
+    <link href="css/styles.css" rel="stylesheet">
 
 
     
@@ -20,6 +25,7 @@
          <link rel="stylesheet" href="css/style-normal.css" />
       </noscript>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
 
 
@@ -32,7 +38,7 @@
    </div>
 
    <div id="logo" class="img-responsive">
-      <img src="img/logo-1.png"></img>
+      <img src="img/logo-2.png"></img>
    </div>
 
 
