--- a/confirmed.html
+++ b/confirmed.html
@@ -38,7 +38,7 @@
       </div>
 
       <div id="logo" class="img-responsive">
-         <img src="img/logo-2.png"></img>
+        <a href="index.html"> <img src="img/logo-2.PNG"></img></a>
       </div>
 
 
