--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
          <link rel="stylesheet" href="css/styles.css" />
          <link rel="stylesheet" href="css/style-wide.css" />
          <link rel="stylesheet" href="css/style-normal.css" />
+         <link rel="stylesheet" href="css/style-mobile.css" />
       </noscript>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
