fixed for mobile

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          <link rel="stylesheet" href="css/styles.css" />
          <link rel="stylesheet" href="css/style-wide.css" />
          <link rel="stylesheet" href="css/style-normal.css" />
-         <link rel="stylesheet" href="css/style-mobile.css" />
+
       </noscript>
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -32,22 +32,18 @@
 
 
 <body class="fullPage-portfolio">
-   <div id="menu">
-      <div class="menu-bars">
-         <span></span>
-      </div>
-   </div>
+
+
+
+
+
+
+
+   <div class="text-center container-fluid" id="fullpage">
 
    <div id="logo" class="img-responsive">
      <a href="index.html"> <img src="img/logo-2.PNG"></img></a>
    </div>
-
-
-
-
-   <div class="text-center" id="fullpage">
-
-
 
       <div class="section active" id="section0" >
 
@@ -58,7 +54,7 @@
                </header>
                   <p>Learn More</p>
                <footer>
-                  <a href="#secondPage" class="button style2 down">More</a>
+                  <a href="#secondPage" class="button style2 down"></a>
                </footer>
             </div>
          </div>
@@ -75,7 +71,7 @@
                Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu, 
                id varius justo euismod in. Curabitur egestas consectetur magna.</p>
             </div>
-            <a href="#thirdPage" class="button style2 down anchored">Next</a>
+            <a href="#thirdPage" class="button style2 down anchored"></a>
          </section>
       </div>
 
@@ -91,7 +87,7 @@
                Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu, 
                id varius justo euismod in. Curabitur egestas consectetur magna.</p>
             </div>
-            <a href="#fourthPage" class="button style2 down anchored">Next</a>
+            <a href="#fourthPage" class="button style2 down anchored"></a>
          </section>
       </div>
 
