--- a/confirmed.html
+++ b/confirmed.html
@@ -48,12 +48,23 @@
       <div class="section active" id="confirmed" >
 
          <div class="main style1 dark fullscreen">
-            <div class="content container small">
-               <header>
-                  <h2>Subscription Confirmed!</h2>
-               </header>
-                  <p>Your subscription to our list has been confirmed. <br> Thank you for subscribing!</p>
-            </div>
+          <div class="container subscribe">
+                 <div class="row">
+                    <div class="col-md-offset-2 col-md-8">
+                       <div class="message">
+                          <header><h2>Subscription Confirmed!</h2></header>
+                          <p>Your subscription to our list has been confirmed. <br> Thank you for subscribing! </p>
+                       </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-offset-2 col-md-8">
+                      <form action="index.html" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
+                       <div class="clear"><input type="submit" value="back to site" name="subscribe" id="mc-embedded-thankyou" class="button"></div>
+                     </form>
+                    </div>
+                </div>
+              </div>
          </div>
       </div>
 
