--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu, 
                id varius justo euismod in. Curabitur egestas consectetur magna.</p>
             </div>
-            <a href="#fifthPage" class="button style2 down anchored">Next</a>
+            <a href="#fifthPage" class="button style2 down anchored"></a>
          </section>
       </div>
 
@@ -112,26 +112,35 @@
 
       <div class="section" id="section4">
          <section id="two" class="main style2 right dark fullscreen">
-           <div class="containter">
-             <div class="row">
-               <div class="col-md-offset-3 col-md-6">
+            <div class="containter subscribe">
+               <div class="row">
+                  <div class="col-md-offset-2 col-md-8">
+                     <div class="message">
+                        <header><h2>SIGN UP</h2></header>
+                        <p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum. </p>
+                     </div>
+                  </div>
+               </div>
+               <div class="row">
+                  <div class="col-md-offset-3 col-md-6">            
 
                      <!-- Begin MailChimp Signup Form -->
 
-                     <div id="mc_embed_signup">
+                     <div id="mc_embed_signup" >
                         <form action="https://instalimos.us10.list-manage.com/subscribe/post?u=4e99482a5808fd710dbb647ff&id=b6945ada27" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
 
                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address" required>
+                                 <div class="response" id="mce-error-response" style="display:none"></div>
+      <div class="response" id="mce-success-response" style="display:none"></div>
                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                            <div style="position: absolute; left: -5000px;"><input type="text" name="b_4e99482a5808fd710dbb647ff_b6945ada27" value=""></div>
                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                           </div>
                         </form>
                      </div>
+                  </div>
                </div>
-             </div>
-           </div>
-        </section>
+            </div>
+         </section>
       </div>
     </div>
 
