--- a/thank-you.html
+++ b/thank-you.html
@@ -45,17 +45,28 @@
       <div class="text-center" id="fullpage">
 
    
-      <div class="section active" id="thankyou" >
+        <div class="section active" id="thankyou" >
 
-         <div class="main style1 dark fullscreen">
-            <div class="content container small">
-               <header>
-                  <h2>Almost finished...</h2>
-               </header>
-                  <p>We need to confirm your email address. <br> To complete the subscription process, please click the link in the email we just sent you.</p>
-            </div>
-         </div>
-      </div>
+           <div class="main style2 dark fullscreen">
+              <div class="container subscribe">
+                 <div class="row">
+                    <div class="col-md-offset-2 col-md-8">
+                       <div class="message">
+                          <header><h2>Almost finished...</h2></header>
+                          <p>We need to confirm your email address. <br> To complete the subscription process, please click the link in the email we just sent you. </p>
+                       </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-offset-2 col-md-8">
+                      <form action="index.html" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
+                       <div class="clear"><input type="submit" value="back to site" name="subscribe" id="mc-embedded-thankyou" class="button"></div>
+                     </form>
+                    </div>
+                </div>
+              </div>
+           </div>
+        </div>
 
 
 
