--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
                      <div id="mc_embed_signup" >
                         <form action="https://instalimos.us10.list-manage.com/subscribe/post?u=4e99482a5808fd710dbb647ff&id=b6945ada27" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
 
-                           <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address" required>
+                           <input class="mailform" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address" required>
                                  <div class="response" id="mce-error-response" style="display:none"></div>
-      <div class="response" id="mce-success-response" style="display:none"></div>
+                                 <div class="response" id="mce-success-response" style="display:none"></div>
                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                            <div style="position: absolute; left: -5000px;"><input type="text" name="b_4e99482a5808fd710dbb647ff_b6945ada27" value=""></div>
-                           <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                           <div class="clear"><input class="mailform" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                         </form>
                      </div>
                   </div>
